Frontend/src/features/user/activities-page/tabs/watched/watched.component.css
/*
This file is part of Glotzenheft.

Glotzenheft is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Glotzenheft is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
*/

.pagination {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.gapDIV {
    height: 5rem;
    width: 100%;
}

@media (min-width: 940px) {
    .gapDIV {
        height: 2rem;
        width: 100%;
    }
}

img {
    height: 6rem;
    border: 0.2rem solid black;
}

.mediaRow:hover {
    cursor: pointer;
    text-decoration: underline;
}

td:nth-child(2),
td:nth-child(3),
td:nth-child(4) {
    text-align: center;
}

th:nth-child(2),
th:nth-child(3),
th:nth-child(4) {
    text-align: center;
}

.userActivitesTableDIV {
    max-height: 100%;
    overflow-y: auto;
}

:host ::ng-deep .p-datatable-thead > tr > th {
    position: sticky;
    top: 0;
    z-index: 10000;
}

:host ::ng-deep .p-datatable-thead {
    z-index: 10000 !important;
}
:host ::ng-deep .p-datatable-table-container {
    overflow: clip !important;
}

:host ::ng-deep .p-datatable-tbody > tr > td .p-image {
    position: relative !important;
    z-index: 1;
    max-height: 6rem;
    max-width: 160px;
}

:host ::ng-deep .p-datatable-tbody > tr > td img {
    position: static !important;
    max-height: 6rem;
    max-width: 160px;
}

:host ::ng-deep .p-image-preview-mask {
    border-radius: 10px;
}

